Fixing Css spacings

--- a/css/index.css
+++ b/css/index.css
@@ -168,7 +168,6 @@ body {
   width: 780px;
   height: 780px;
   border-radius: 50%;
-  background-color: #d9dee6;
   top: 50%;
   right: -390px;
   transform: translateY(-50%);
